feat(notification-service2-service): new order api added
created new api

BREAKING CHANGE:
changes

-31
